# syntaxis

./: .envrc  .gitignore  .tool-versions  README.md  dictionary.csv  justfile  main.py  pyproject.toml
client/: package-lock.json  package.json
client/src/: App.vue  main.js
data/: dictionary.csv
docs/: cleanup_plan.md  code_audit.md  project_diagram.mermaid  testing_suggestions.md  v2-syntax-guide.md
docs/plans/: 2025-10-29-add-word-method-design.md  2025-10-29-add-word-method-implementation.md  2025-10-29-feature-based-word-retrieval-design.md  2025-10-29-feature-based-word-retrieval-implementation.md  2025-11-09-schema-refactor-design.md  2025-11-09-schema-refactor-implementation.md  2025-11-10-enum-to-string-constants-design.md  2025-11-10-enum-to-string-constants-implementation.md  2025-11-10-rest-api-implementation.md  2025-11-10-rest-api-service-design.md  2025-11-11-template-v2-design.md  2025-11-11-template-v2-implementation.md  2025-11-11_client_interface.md  2025-11-12-logging-system-design.md  2025-11-12-v2-template-builder-design.md  2025-11-12-v2-template-builder-implementation.md  2025-11-15-template-storage-design.md  2025-11-15-template-storage.md  2025-11-15-wildcard-templates-design.md  2025-11-15-wildcard-templates.md
docs/usage/: creating_templates.md  get_random_word.md
scripts/: exp.py
syntaxis/: __init__.py  api.py  cli.py  morpheus.py  syntaxis.py
syntaxis/cli/: __main__.py  app.py
syntaxis/database/: __init__.py  api.py  bitmasks.py  (+4 more)
tasks/: tasks-2025-11-11_client_interface.md
tests/: test_api.py  test_cli.py  test_morpheus.py
(+96 files in other folders)
