[project]
name = "syntaxis"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "modern-greek-inflexion",
    "prettytable>=3.16.0",
    "typer>=0.12.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "pudb>=2025.1.3",
    "autoflake>=2.0.0",
    "black>=25.9.0",
    "ipython>=8.37.0",
    "isort>=7.0.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
modern-greek-inflexion = { git = "https://github.com/gataky/modern-greek-inflexion.git" }

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | syntaxis/database/seeds
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
known_first_party = ["hellenic_nlp_tools"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.setuptools]
packages = ["syntaxis"]

[tool.pyright]
reportUnusedVariable = "none"
